# bosun-box

./: .gitignore  README.md  package-lock.json  package.json
app/: README.md
app/src-tauri/: Cargo.toml  README.md
app/src-tauri/data/: nmea_data.txt
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: main.rs  nmea.rs  power.rs  screen.rs
app/src/nmea/: DataPanelPage.tsx
app/src/providers/: UIProvider.tsx
app/src/settingsDrawer/: FullScreenToggle.tsx
app/src/theme/: theme.ts
client/: README.md  index.html  package-lock.json  package.json  webpack.config.js
client/config/: config.json
client/src/: App.tsx  index.tsx  theme.ts
client/src-tauri/: Cargo.toml  Dockerfile  README.md  tauri.conf.json
client/src-tauri/src/: main.rs  nmea.rs  power.rs  screen.rs  utils.rs
client/src/hooks/: useScreen.ts  useShutdown.ts
client/src/layout/: PageWrapper.tsx
client/src/nmea/: DataPanel.tsx
client/src/providers/: QueryProvider.tsx
client/src/theme/: stat.ts  (+1 more)
hardware/: Cargo.toml  README.md  index.ts  nmea_data.txt  package-lock.json  package.json
hardware/src/: main.rs  middlewares.ts  nmea.rs  routes.ts  screen.rs  serial_ex.rs
hardware/src/screen/: screen.controller.ts  screen.routes.ts  screen.service.ts
hardware_service/: README.md  app.py  requirements.txt  utils.py
hardware_service/power/: power.py  power_service.py
hardware_service/screen/: screen.py  screen_io.py
hardware_service/scripts/: dev.sh  dev_mock.sh  prod.sh
scripts/: README.md  client_build_copy.sh  hardware_build_copy.sh
signalk/: README.md  raw_copied_data.txt
(+13 files in other folders)
