[package]
name = "hardware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# lets just include all of the dependencies that the tauri app would use here
[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.20"
simple_logger = "4.3.0"
rppal = "0.16.1"
serialport = { version = "4.3.0", default-features = false }
clap = "4.4.13"
nmea-parser = "0.10.0"
